--- a/Frontend/www/index.html
+++ b/Frontend/www/index.html
@@ -32,7 +32,7 @@
 
             <div class="phone-number"> (044) 175 3 888</div>
             <div class="work-hours"> 24 години/7 днiв на тиждень</div>
-            <div class="free-delivery"> Безкоштовна доставка пiци</div>
+            <div class="free-delivery  "> Безкоштовна доставка пiци</div>
             <div class="btn btn-warning btn-sign-in"> Ввiйти</div>
 
 
@@ -57,14 +57,14 @@
     </div>
 </div>
 
-<div class="container-fluid container-menu">
-
+<div class="container-menu container-fluid">
+    <div class="menu container">
     <h1 align="center"> Усi Пiци <span class="badge "> 9 </span> </h1>
 
     <div class="menu-titles">
 
     <a href="#" class="active" style="text-decoration: none" > Усi </a>
-    <a href ="#" style="text-decoration: none"> Мяснi </a>
+    <a href ="#" style="text-decoration: none"> М'яснi </a>
     <a href="#" style="text-decoration: none"> З ананасами </a>
     <a href="#" style="text-decoration: none"> З грибами </a>
     <a href="#" style="text-decoration: none"> З морепродуктами </a>
@@ -74,13 +74,15 @@
 
 
     <div class="row" id="pizza_list">
-        <div class="col-sm-6 col-md-4">
+        <div class="col-md-6 col-lg-4">
             <div class="thumbnail pizza-card">
-                <img src="assets/images/pizza_1.jpg">
-
+                <img class="pizza-img" src="assets/images/pizza_1.jpg">
+                <h3 class="pizza-label">
+                    <span class="label label-danger ">Нова</span>
+                </h3>
                 <div class="caption"><h3>Міксовий поло</h3>
                     <div class="type"> М’ясна піца </div>
-                    <p>Вітчина, куриця копчена, сир моцарелла, ананаси, кукурудза, петрушка, соус томатний</p>
+                    <p class="pizza-description">Вітчина, куриця копчена, сир моцарелла, ананаси, кукурудза, петрушка, соус томатний</p>
 
                     <div class="big-small">
 
@@ -126,13 +128,16 @@
             </div>
         </div>
 
-        <div class="col-sm-6 col-md-4">
+        <div class="col-md-6 col-lg-4">
             <div class="thumbnail pizza-card">
                 <img src="assets/images/pizza_2.jpg">
 
                 <div class="caption"><h3>BBQ</h3>
+                    <h3 class="pizza-label popular">
+                        <span class="label label-success ">Популярна</span>
+                    </h3>
                     <div class="type"> М’ясна піца </div>
-                    <p>Мисливські ковбаски, ковбаски папероні, шинка, сир домашній, шампіньйони, петрушка, оливки</p>
+                    <p class="pizza-description">Мисливські ковбаски, ковбаски папероні, шинка, сир домашній, шампіньйони, петрушка, оливки</p>
 
                     <div class="big-small">
 
@@ -178,13 +183,13 @@
         </div>
 
 
-        <div class="col-sm-6 col-md-4">
+        <div class="col-md-6 col-lg-4">
             <div class="thumbnail pizza-card">
                 <img src="assets/images/pizza_3.jpg">
 
                 <div class="caption"><h3>Маргарита</h3>
                     <div class="type"> Вега піца </div>
-                    <p>Сир моцарелла, сир домашній, помідори, базилік, оливкова олія, соус томатний</p>
+                    <p class="pizza-description">Сир моцарелла, сир домашній, помідори, базилік, оливкова олія, соус томатний</p>
 
                     <div class="big-small">
 
@@ -232,13 +237,13 @@
         </div>
 
 
-        <div class="col-sm-6 col-md-4">
+        <div class="col-md-6 col-lg-4">
             <div class="thumbnail pizza-card">
                 <img src="assets/images/pizza_4.jpg">
 
                 <div class="caption"><h3>Россо Густо</h3>
                     <div class="type"> Морська піца </div>
-                    <p>Ікра червона, лосось копчений, сир моцарелла, оливкова олія, вершки</p>
+                    <p class="pizza-description">Ікра червона, лосось копчений, сир моцарелла, оливкова олія, вершки</p>
 
                     <div class="big-small">
 
@@ -284,13 +289,13 @@
         </div>
 
 
-        <div class="col-sm-6 col-md-4">
+        <div class="col-md-6 col-lg-4">
             <div class="thumbnail pizza-card">
                 <img src="assets/images/pizza_5.jpg">
 
                 <div class="caption"><h3>Сицилiано </h3>
                     <div class="type"> М’ясна піца </div>
-                    <p>Вітчина, салямі, сир моцарелла, шампінйони, перець болгарський, соус томатний </p>
+                    <p class="pizza-description">Вітчина, салямі, сир моцарелла, шампінйони, перець болгарський, соус томатний </p>
 
                     <div class="big-small">
 
@@ -335,13 +340,13 @@
             </div>
         </div>
 
-        <div class="col-sm-6 col-md-4">
+        <div class="col-md-6 col-lg-4">
             <div class="thumbnail pizza-card">
                 <img src="assets/images/pizza_6.jpg">
 
                 <div class="caption"><h3>Мікс смаків</h3>
                     <div class="type"> М’ясна піца </div>
-                    <p>Ковбаски, сир моцарелла, шампінйони, ананаси, цибуля кримська, огірки квашені, соус гірчичнийй </p>
+                    <p class="pizza-description">Ковбаски, сир моцарелла, шампінйони, ананаси, цибуля кримська, огірки квашені, соус гірчичнийй </p>
 
                     <div class="big-small">
 
@@ -386,13 +391,13 @@
             </div>
         </div>
 
-        <div class="col-sm-6 col-md-4">
+        <div class="col-md-6 col-lg-4">
             <div class="thumbnail pizza-card">
                 <img src="assets/images/pizza_7.jpg">
 
                 <div class="caption"><h3>Імпреза</h3>
                     <div class="type"> М’ясна піца </div>
-                    <p>Балик, салямі, куриця, сир моцарелла, сир рокфорд, ананаси, томатна паста, петрушка</p>
+                    <p class="pizza-description">Балик, салямі, куриця, сир моцарелла, сир рокфорд, ананаси, томатна паста, петрушка</p>
 
                     <div class="big-small">
 
@@ -437,13 +442,13 @@
             </div>
         </div>
 
-        <div class="col-sm-6 col-md-4">
+        <div class="col-md-6 col-lg-4">
             <div class="thumbnail pizza-card">
                 <img src="assets/images/pizza_8.jpg">
 
                 <div class="caption"><h3>Дольче Маре</h3>
                     <div class="type"> Морська піца </div>
-                    <p>Криветки тигрові, мідії, ікра червона, філе червоної риби, сир моцарелла, оливкова олія, вершки </p>
+                    <p class="pizza-description">Криветки тигрові, мідії, ікра червона, філе червоної риби, сир моцарелла, оливкова олія, вершки</p>
 
                     <div class="big-small">
 
@@ -488,13 +493,13 @@
             </div>
         </div>
 
-        <div class="col-sm-6 col-md-4">
+        <div class="col-md-6 col-lg-4">
             <div class="thumbnail pizza-card">
                 <img src="assets/images/pizza_9.jpg">
 
                 <div class="caption"><h3>Верона</h3>
                     <div class="type"> М’ясна піца </div>
-                    <p> Вiтчина, cалямi, куряча грудинка копчена, петрушка, сир моцарелла, сир эдам, вершки </p>
+                    <p class="pizza-description">Вiтчина, cалямi, куряча грудинка копчена, петрушка, сир моцарелла, сир эдам, вершки</p>
 
                     <div class="big-small">
 
@@ -545,11 +550,248 @@
 </div>
 
 
+
 <div class=" panel right-panel ">
 
 <div class ="right-title">
-    <div class="order"> Замовлення <span class="badge "> 8 </span> </div>
+
+    <div class="order-title"> Замовлення <span class="badge "> 8 </span>
+    <a href="#" class="btn btn-link" id="delete-order">Очистити замовлення</a>
+    </div>
 </div>
+
+    <div class=" order-bill">
+        <span class="sum">Сума замовлення</span>
+        <span class="sum sum-num">3000 грн.</span>
+        <a href="#" class="btn btn-warning btn-block" id="order-btn">Замовити</a>
+    </div>
+
+    <div class="orders ">
+
+        <div class="order">
+            <div class="ordered-pizza title"> Iмпреза (Мала) </div>
+
+            <span class="ordered-pizza size">  <img src="assets/images/size-icon.svg">  40 </span>
+            <span class="ordered-pizza weight"> <img src="assets/images/weight.svg">  660 </span>
+
+            <div class = "row">
+
+            <span class="ordered-pizza price"> 99 грн. </span>
+
+                <button class="btn btn-danger circle minus">
+                    <i class="glyphicon glyphicon-minus "> </i>
+                </button>
+                <span class="ordered-pizza price"> 1 </span>
+                <button class=" btn btn-xs btn-success circle plus" >
+                    <i class="glyphicon glyphicon-plus "> </i>
+                </button>
+
+                <button class="remove btn btn-default circle remove">
+                    <i class="glyphicon glyphicon-remove "> </i>
+                </button>
+
+            </div>
+
+            <img class="ordered-pizza img " src="assets/images/pizza_1.jpg">
+        </div>
+
+        <div class="order">
+            <div class="ordered-pizza title"> Россо Густо (Мала) </div>
+
+
+            <span class="ordered-pizza size">  <img src="assets/images/size-icon.svg">  40 </span>
+            <span class="ordered-pizza weight"> <img src="assets/images/weight.svg">  660 </span>
+
+
+            <div class = "row">
+
+                <span class="ordered-pizza price"> 99 грн. </span>
+
+                <button class="btn btn-danger circle minus">
+                    <i class="glyphicon glyphicon-minus "> </i>
+                </button>
+                <span class="ordered-pizza price"> 1 </span>
+                <button class=" btn btn-xs btn-success circle plus" >
+                    <i class="glyphicon glyphicon-plus "> </i>
+                </button>
+
+                <button class="remove btn btn-default circle remove">
+                    <i class="glyphicon glyphicon-remove "> </i>
+                </button>
+
+            </div>
+
+            <img class="ordered-pizza img" src="assets/images/pizza_4.jpg">
+        </div>
+
+        <div class="order">
+            <div class="ordered-pizza title"> Iмпреза (Велика) </div>
+
+            <span class="ordered-pizza size">  <img src="assets/images/size-icon.svg">  40 </span>
+            <span class="ordered-pizza weight"> <img src="assets/images/weight.svg">  660 </span>
+
+            <div class = "row">
+
+                <span class="ordered-pizza price"> 159 грн. </span>
+
+                <button class="btn btn-danger circle minus">
+                    <i class="glyphicon glyphicon-minus "> </i>
+                </button>
+                <span class="ordered-pizza price"> 1 </span>
+                <button class=" btn btn-xs btn-success circle plus" >
+                    <i class="glyphicon glyphicon-plus "> </i>
+                </button>
+
+                <button class="remove btn btn-default circle remove">
+                    <i class="glyphicon glyphicon-remove "> </i>
+                </button>
+
+            </div>
+
+            <img class="ordered-pizza img" src="assets/images/pizza_1.jpg">
+        </div>
+
+        <div class="order">
+            <div class="ordered-pizza title"> Россо Густо (Мала) </div>
+
+            <span class="ordered-pizza size">  <img src="assets/images/size-icon.svg">  40 </span>
+            <span class="ordered-pizza weight"> <img src="assets/images/weight.svg">  660 </span>
+
+            <div class = "row">
+
+                <span class="ordered-pizza price"> 12 грн. </span>
+
+                <button class="btn btn-danger circle minus">
+                    <i class="glyphicon glyphicon-minus "> </i>
+                </button>
+                <span class="ordered-pizza price"> 7 </span>
+                <button class=" btn btn-xs btn-success circle plus" >
+                    <i class="glyphicon glyphicon-plus "> </i>
+                </button>
+
+                <button class="remove btn btn-default circle remove">
+                    <i class="glyphicon glyphicon-remove "> </i>
+                </button>
+
+            </div>
+
+            <img class="ordered-pizza img" src="assets/images/pizza_9.jpg">
+        </div>
+
+        <div class="order">
+            <div class="ordered-pizza title"> Iмпреза (Велика) </div>
+
+            <span class="ordered-pizza size">  <img src="assets/images/size-icon.svg">  40 </span>
+            <span class="ordered-pizza weight"> <img src="assets/images/weight.svg">  660 </span>
+
+            <div class = "row">
+
+                <span class="ordered-pizza price"> 199 грн. </span>
+
+                <button class="btn btn-danger circle minus">
+                    <i class="glyphicon glyphicon-minus "> </i>
+                </button>
+                <span class="ordered-pizza price"> 1 </span>
+                <button class=" btn btn-xs btn-success circle plus" >
+                    <i class="glyphicon glyphicon-plus "> </i>
+                </button>
+
+                <button class="remove btn btn-default circle remove">
+                    <i class="glyphicon glyphicon-remove "> </i>
+                </button>
+
+            </div>
+
+            <img class="ordered-pizza img" src="assets/images/pizza_5.jpg">
+        </div>
+
+        <div class="order">
+            <div class="ordered-pizza title"> Верона (Мала) </div>
+
+            <span class="ordered-pizza size">  <img src="assets/images/size-icon.svg">  40 </span>
+            <span class="ordered-pizza weight"> <img src="assets/images/weight.svg">  660 </span>
+
+            <div class = "row">
+
+                <span class="ordered-pizza price"> 99 грн. </span>
+
+                <button class="btn btn-danger circle minus">
+                    <i class="glyphicon glyphicon-minus "> </i>
+                </button>
+                <span class="ordered-pizza price"> 1 </span>
+                <button class=" btn btn-xs btn-success circle plus" >
+                    <i class="glyphicon glyphicon-plus "> </i>
+                </button>
+
+                <button class="remove btn btn-default circle remove">
+                    <i class="glyphicon glyphicon-remove "> </i>
+                </button>
+
+            </div>
+
+            <img class="ordered-pizza img" src="assets/images/pizza_8.jpg">
+        </div>
+
+        <div class="order">
+            <div class="ordered-pizza title"> Сицилiано (Мала) </div>
+
+            <span class="ordered-pizza size">  <img src="assets/images/size-icon.svg">  40 </span>
+            <span class="ordered-pizza weight"> <img src="assets/images/weight.svg">  660 </span>
+
+            <div class = "row">
+
+                <span class="ordered-pizza price"> 99 грн. </span>
+
+                <button class="btn btn-danger circle minus">
+                    <i class="glyphicon glyphicon-minus "> </i>
+                </button>
+                <span class="ordered-pizza price"> 1 </span>
+                <button class=" btn btn-xs btn-success circle plus" >
+                    <i class="glyphicon glyphicon-plus "> </i>
+                </button>
+
+                <button class="remove btn btn-default circle remove">
+                    <i class="glyphicon glyphicon-remove "> </i>
+                </button>
+
+            </div>
+
+            <img class="ordered-pizza img" src="assets/images/pizza_2.jpg">
+        </div>
+
+        <div class="order">
+            <div class="ordered-pizza title"> Дольче Маро (Мала) </div>
+
+            <span class="ordered-pizza size">  <img src="assets/images/size-icon.svg">  40 </span>
+            <span class="ordered-pizza weight"> <img src="assets/images/weight.svg">  660 </span>
+
+            <div class = "row">
+
+                <span class="ordered-pizza price"> 99 грн. </span>
+
+                <button class="btn btn-danger circle minus">
+                    <i class="glyphicon glyphicon-minus "> </i>
+                </button>
+                <span class="ordered-pizza price"> 1 </span>
+                <button class=" btn btn-xs btn-success circle plus" >
+                    <i class="glyphicon glyphicon-plus "> </i>
+                </button>
+
+                <button class="remove btn btn-default circle remove">
+                    <i class="glyphicon glyphicon-remove "> </i>
+                </button>
+
+            </div>
+
+            <img class="ordered-pizza img" src="assets/images/pizza_7.jpg">
+        </div>
+
+
+
+    </div>
+
+
+
 
 </div>
 
