--- a/Frontend/www/index.html
+++ b/Frontend/www/index.html
@@ -59,7 +59,7 @@
 
 <div class="container-menu container-fluid">
     <div class="menu container">
-        <h1 align="center"> Усi Пiци <span class="badge "> 9 </span></h1>
+        <h1 class="main-title" align="center"> Усi Пiци <span class="badge "> 9 </span></h1>
 
         <div class="menu-titles">
 
