--- a/Frontend/www/index.html
+++ b/Frontend/www/index.html
@@ -77,7 +77,9 @@
             <div class="col-md-6 col-lg-4">
                 <div class="thumbnail pizza-card">
                     <img src="assets/images/pizza_1.jpg">
-
+                    <h3 class="pizza-label short-label">
+                        <span class="label label-danger">Нова</span>
+                    </h3>
                     <div class="caption"><h3>Міксовий поло</h3>
                         <div class="type"> М’ясна піца</div>
                         <p class="pizza-description">ітчина, куриця копчена, сир моцарелла, ананаси, кукурудза,
@@ -129,7 +131,9 @@
             <div class="col-md-6 col-lg-4">
                 <div class="thumbnail pizza-card">
                     <img src="assets/images/pizza_2.jpg">
-
+                    <h3 class="pizza-label label-long">
+                        <span class="label label-success">Популярна</span>
+                    </h3>
                     <div class="caption"><h3>BBQ</h3>
                         <div class="type">М’ясна піца</div>
                         <p class="pizza-description">Мисливські ковбаски, ковбаски папероні, шинка, сир домашній,
