update: local storage and filters

--- a/Frontend/www/index.html
+++ b/Frontend/www/index.html
@@ -33,7 +33,7 @@
             <div class="phone-number"> (044) 175 3 888</div>
             <div class="work-hours"> 24 години/7 днiв на тиждень</div>
             <div class="free-delivery  "> Безкоштовна доставка пiци</div>
-            <div class="btn btn-warning btn-sign-in"> Ввiйти</div>
+            <div class="btn btn-warning btn-sign-in"> Ввiйти </div>
 
 
         </div>
@@ -63,12 +63,12 @@
 
         <div class="menu-titles">
 
-            <a href="#" class="active btn btn-link btn-title" style="text-decoration: none"> Усi </a>
-            <a href="#" class="btn btn-link btn-title" style="text-decoration: none"> М'яснi </a>
-            <a href="#" class="btn btn-link btn-title" style="text-decoration: none"> З ананасами </a>
-            <a href="#" class="btn btn-link btn-title" style="text-decoration: none"> З грибами </a>
-            <a href="#" class="btn btn-link btn-title" style="text-decoration: none"> З морепродуктами </a>
-            <a href="#" class="btn btn-link btn-title" style="text-decoration: none"> Вега </a>
+            <a href="#" id="all-pizzas" class="active btn btn-link btn-title" style="text-decoration: none"> Усi </a>
+            <a href="#" id="meat-pizzas" class="btn btn-link btn-title" style="text-decoration: none"> М'яснi </a>
+            <a href="#" id="pineapple-pizzas" class="btn btn-link btn-title" style="text-decoration: none"> З ананасами </a>
+            <a href="#" id="mushroom-pizzas" class="btn btn-link btn-title" style="text-decoration: none"> З грибами </a>
+            <a href="#" id="sea-pizzas" class="btn btn-link btn-title" style="text-decoration: none"> З морепродуктами </a>
+            <a href="#" id="veg-pizzas" class="btn btn-link btn-title" style="text-decoration: none"> Вега </a>
 
         </div>
 
