--- a/Frontend/www/order.html
+++ b/Frontend/www/order.html
@@ -33,7 +33,7 @@
             <div class="phone-number"> (044) 175 3 888</div>
             <div class="work-hours"> 24 години/7 днiв на тиждень</div>
             <div class="free-delivery  "> Безкоштовна доставка пiци</div>
-            <div class="btn btn-warning btn-sign-in"> Ввiйти </div>
+            <div class="btn btn-warning btn-sign-in"> Ввiйти</div>
 
 
         </div>
@@ -57,10 +57,49 @@
     </div>
 </div>
 
-<div class="container-menu container-fluid">
-   <div class="form">
+<div class="container-menu container-fluid container-form">
+    <div class="menu container">
+        <div class="form">
+            <h3> 1. Контактні дані </h3>
+            <div class="row">
+                <form class="form-horizontal">
+                    <div class="col-md-7 contact-form">
+                        <div class="form-group ">
+                            <label class="col-sm-2"> Ім’я </label>
+                            <div class="col-sm-10">
+                                <input class="form-control " type="text" placeholder="Имя Фамилия">
+                            </div>
+                        </div>
+                        <div class="form-group ">
+                            <label class="col-sm-2"> Телефон </label>
+                            <div class="col-sm-10">
+                                <input class="form-control" type="text" placeholder="+380991358888">
+                            </div>
 
-   </div>
+                        </div>
+                        <div class="form-group ">
+                            <label class="col-sm-2"> Адреса </label>
+                            <div class="col-sm-10">
+                                <input class="form-control" type="text" placeholder="Подол, Киев, Украина">
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <div class="col-md-5">
+                    <div class="bs-callout bs-callout-success extra-info">
+                        <h4>Інформація про замовлення</h4>
+                        <p id="time-info" class="order-info"><b>Приблизний час доставки:</b> невідомий </p>
+                        <p id="address-info" class="order-info"><b>Адреса доставки:</b> невідома</p>
+                    </div>
+                </div>
+
+                <button class="btn btn-warning btn-next"> Далi
+                    <i class=" glyphicon glyphicon-chevron-right "> </i>
+                </button>
+            </div>
+
+        </div>
+    </div>
 </div>
 
 
@@ -77,13 +116,13 @@
         <span class="sum sum-order-title">Сума замовлення</span>
         <span id="total-sum" class="sum sum-num"> 0 </span>
         <span class="sum sum-num"> грн.</span>
-        <button class="btn btn-warning btn-block" id="order-btn" disabled> Редагувати замовлення </button>
+        <button class="btn btn-warning btn-block" id="order-btn" disabled> Редагувати замовлення</button>
     </div>
 
     <div class="orders ">
         <div class="empty-fridge">
-            <div class="no-orders-title"> Пусто в холодильнику ? </div>
-            <div class="no-orders-title"> Замовте піцу! </div>
+            <div class="no-orders-title"> Пусто в холодильнику ?</div>
+            <div class="no-orders-title"> Замовте піцу!</div>
         </div>
         <div id="orders-list"></div>
     </div>
@@ -102,7 +141,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 <!--Own JavaScript -->
-<script type="text/javascript"  src="assets/js/main.js"> </script>
+<script type="text/javascript" src="assets/js/main.js"></script>
 
 </body>
 </html>
