--- a/Frontend/www/index.html
+++ b/Frontend/www/index.html
@@ -119,5 +119,7 @@
 
 <!--Own JavaScript -->
 <script type="text/javascript"  src="assets/js/main.js"> </script>
+
+<script src="//static.liqpay.com/libjs/checkout.js"></script>
 </body>
 </html>
