--- a/Frontend/www/order.html
+++ b/Frontend/www/order.html
@@ -137,6 +137,8 @@
 
 </div>
 
+<div id="liqpay"></div>
+
 <footer>
     <p> Pizza.22 - практичний проект в межах курсу JavaScript в Києво-Могилянській Академії </p>
     <p> Доставка піци не здійснюється </p>
@@ -151,6 +153,8 @@
 
 <!--Own JavaScript -->
 <script type="text/javascript" src="assets/js/main.js"></script>
+
+<script src="//static.liqpay.com/libjs/checkout.js"></script>
 
 </body>
 </html>
